# nugget

./: .gitmodules
experiments/bt_experiments/: CMakeLists.txt  bt_experiments.c  btstack_config.h
experiments/mpr121_tests/: CMakeLists.txt  connect.sh  mpr121_tests.c
experiments/pico_tests/: CMakeLists.txt  pico_tests.c
experiments/pwm_experiments/: CMakeLists.txt  pwm_experiments.c
